# QuickCmd

./: CMakeLists.txt  QuickCMD.sln
QuickCMD/: CommonDefine.h  ConfigManager.cpp  ConfigManager.h  QtCMDButton.cpp  QtCMDButton.h  QuickCMD.cpp  QuickCMD.h  QuickCMD.qrc  QuickCMD.ui  QuickCMD.vcxproj  QuickCMD.vcxproj.filters  main.cpp
QuickCmd/: CMakeLists.txt  setting.json
